--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <script src='//in.fw-cdn.com/30220937/132772.js' chat='true'></script>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
